show paypal status

--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -24,7 +24,6 @@ $helperImage = new Default_View_Helper_Image();
 $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $this->tab = 'settings';
 
-$member = $this->member;
 ?>
 
 <main class="user-admin-page">
@@ -47,9 +46,21 @@ $member = $this->member;
                 <section class="settings-page">
                     <h1 class="page-title"><?= $this->translate('Settings') ?></h1>
                 <?php
+                    $member = $this->member;
                     if($member->paypal_valid_status > 100) {
                         $status = $this->paypal_valid_status;
-                        echo '<div class="alert alert-danger" role="alert">'.$status->description.'</div>';
+                        if($status->color == 'red') {
+                            echo '<div class="alert alert-danger" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'yellow') {
+                            echo '<div class="alert alert-warning" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'blue') {
+                            echo '<div class="alert alert-info" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'green') {
+                            echo '<div class="alert alert-success" role="alert">'.$status->description.'</div>';
+                        }
                     }
                 ?>
                     <br/>
