--- a/application/modules/default/views/scripts/user/plings.phtml
+++ b/application/modules/default/views/scripts/user/plings.phtml
@@ -40,6 +40,24 @@ $this->countDownloadsOverall = count($this->downloads);
                 <div class="my-products-heading">
                     <h1 class="page-title left"><?= $this->translate('Payout') ?></h1>
                 </div>
+                <?php
+                    $member = $this->member;
+                    if($member->paypal_valid_status > 100) {
+                        $status = $this->paypal_valid_status;
+                        if($status->color == 'red') {
+                            echo '<div class="alert alert-danger" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'yellow') {
+                            echo '<div class="alert alert-warning" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'blue') {
+                            echo '<div class="alert alert-info" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'green') {
+                            echo '<div class="alert alert-success" role="alert">'.$status->description.'</div>';
+                        }
+                    }
+                ?>
                 <div class="my-products-list" id="my-payout-list">
                     <?php
                     //if ($this->countDownloadsOverall > 0) {
