view paypal valid status

--- a/application/modules/default/views/scripts/user/plings.phtml
+++ b/application/modules/default/views/scripts/user/plings.phtml
@@ -41,7 +41,7 @@ $this->countDownloadsOverall = count($this->downloads);
                     <h1 class="page-title left"><?= $this->translate('Payout') ?></h1>
                 </div>
                 <?php
-                    $member = $this->member;
+                    $member = $this->view_member;
                     if($member->paypal_valid_status > 100) {
                         $status = $this->paypal_valid_status;
                         if($status->color == 'red') {
