--- a/application/modules/default/views/scripts/spam/list.phtml
+++ b/application/modules/default/views/scripts/spam/list.phtml
@@ -52,45 +52,56 @@
                     foreach ($this->products as $this->product) {
                         $updateTime = $helperPrintDate->printDate($this->product['project_changed_at']);
                         ?>
-                        <div class="explore-product col-lg-10 col-md-10 col-sm-10 col-xs-10" style="border-top: 1px solid #ccc;font-size: 12px;padding: 10px 0;">
+                        <div class="explore-product col-lg-10 col-md-10 col-sm-10 col-xs-10"
+                             style="border-top: 1px solid #ccc;font-size: 12px;padding: 10px 0;">
                             <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
                                 <div class="rownum">
-                                    <?= intval($this->rownum)?>.
+                                    <?= intval($this->rownum) ?>.
                                 </div>
                             </div>
                             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 explore-product-imgcolumn">
                                 <figure>
-                                    <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product['project_id'], ''); ?>">
+                                    <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product['project_id'],
+                                        ''); ?>">
                                         <div class="text-center">
-                                            <img src="<?php echo $helperImage->Image($this->product['image_small'], array('width' => 167, 'height' => 167)); ?>" class="explore-product-image" style="max-width:95%;"/>
+                                            <img src="<?php echo $helperImage->Image($this->product['image_small'],
+                                                array('width' => 167, 'height' => 167)); ?>"
+                                                 class="explore-product-image" style="max-width:95%;"/>
                                         </div>
                                     </a>
                                 </figure>
                             </div>
                             <div class="explore-product-details col-lg-7 col-md-7 col-sm-7 col-xs-7">
                                 <h3>
-                                	<?php 
-						              	$version = Default_Model_HtmlPurify::purify($this->product['version']);
-						           	?>
-                                    <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product['project_id'], ''); ?>"><?php echo $this->product['title']; ?> <span style="font-size: smaller; padding-left: 20px"><?php echo $version ?> </span></a>
+                                    <?php
+                                    $version = Default_Model_HtmlPurify::purify($this->product['version']);
+                                    ?>
+                                    <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product['project_id'],
+                                        ''); ?>"><?php echo $this->product['title']; ?> <span
+                                                style="font-size: smaller; padding-left: 20px"><?php echo $version ?> </span></a>
                                 </h3>
 
-                                <b style="display: block; margin-bottom: 5px"><?php echo $this->product['cat_title']?></b>
-                                <b style="display: block; margin-bottom: 5px" class="small">by <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id'])?>"><?php echo $this->product['username']?></a></b>
+                                <b style="display: block; margin-bottom: 5px"><?php echo $this->product['cat_title'] ?></b>
+                                <b style="display: block; margin-bottom: 5px" class="small">by <a
+                                            href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id']) ?>"><?php echo $this->product['username'] ?></a></b>
                                 <?php
                                 $helperPackageTypes = new Default_View_Helper_FetchProjectPackageTypes();
                                 $type = $helperPackageTypes->FetchProjectPackageTypes($this->product['project_id']);
-                                if(!empty($type)){
+                                if (!empty($type)) {
                                     ?>
-                                    <?=$type ?>
+                                    <?= $type ?>
                                 <?php } ?>
 
                                 <div class="productInfo">
                                     <?php
                                     $count_plingers = $this->product['count_plingers'];
                                     $count_comments = $this->product['count_comments'];
-                                    echo ($count_plingers>0 ? '<span class="cntSupporters">'.$count_plingers.' supporter':'').($count_plingers>1?'s':'').($count_plingers>0?'</span>':'') ;
-                                    echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;
+                                    echo ($count_plingers > 0 ? '<span class="cntSupporters">' . $count_plingers
+                                            . ' supporter' : '') . ($count_plingers > 1 ? 's' : '') . ($count_plingers
+                                        > 0 ? '</span>' : '');
+                                    echo ($count_comments > 0 ? '<span class="cntComments">' . $count_comments
+                                            . ' comment' : '') . ($count_comments > 1 ? 's' : '') . ($count_comments > 0
+                                            ? '</span>' : '');
                                     ?>
                                 </div>
                             </div>
@@ -113,17 +124,23 @@
 
                             </div>
                         </div><!-- END .explore-product -->
-                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 small text-right"  style="border-top: 1px solid #ccc;font-size: 12px;padding: 10px 0;">
-                            <a href="/backend/project/delete?project_id=<?=$this->product['project_id']?>" class="delete-this" data-title="Delete this product?">delete product</a>
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 small text-right"
+                             style="border-top: 1px solid #ccc;font-size: 12px;padding: 10px 0;">
+                            <a href="/backend/project/delete?project_id=<?= $this->product['project_id'] ?>"
+                               class="delete-this" data-title="Delete this product?">delete product</a>
                             <hr/>
-                            <a href="/backend/user/delete?member_id=<?=$this->product['member_id']?>" class="delete-this" data-title="Delete this member and all his products and comments?">delete user</a>
+                            <a href="/backend/user/delete?member_id=<?= $this->product['member_id'] ?>"
+                               class="delete-this" data-title="Delete this member and all his products and comments?">delete
+                                user</a>
                             <hr/>
-                            <a href="/backend/reportproducts/nospam?p=<?=$this->product['project_id']?>" class="delete-this" data-title="Reset reports and set product spam checked?">delete reports (<?=$this->product['amount_reports']?>)</a>
+                            <a href="/backend/reportproducts/nospam?p=<?= $this->product['project_id'] ?>"
+                               class="delete-this" data-title="Reset reports and set product spam checked?">delete
+                                reports (<?= $this->product['amount_reports'] ?>)</a>
                         </div>
                         <?php
-                            $this->rownum++;
-                        }
-                        ?>
+                        $this->rownum++;
+                    }
+                    ?>
                 </div>
                 <div class="sidebar-right col-md-2"></div>
             </div>
