--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -167,9 +167,41 @@ if ($this->countDownloadsOverall > 0) {
                 
             </div>
             
-            <?php      
-                if($payout_success) {
-                    echo '<div class="alert alert-success" role="alert">'.$sum_total_text_success.$sum_total_payout_success.'. You can see the details of the transaction on PayPal <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_view-a-trans&id='.$product['payment_transaction_id'].'">here</a>.</div>';
+            <?php   
+                /**
+                *  public static $PAYOUT_STATUS_NEW = 0;
+                   public static $PAYOUT_STATUS_REQUESTED = 1;
+                   public static $PAYOUT_STATUS_PROCESSED = 10;
+                   public static $PAYOUT_STATUS_PENDING = 50;
+                   public static $PAYOUT_STATUS_COMPLETED = 100;
+                   public static $PAYOUT_STATUS_DENIED = 999;
+                   public static $PAYOUT_STATUS_REFUND = 900;
+                   public static $PAYOUT_STATUS_ERROR = 99;
+                */
+                if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_REQUESTED) {
+                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Requested</div>';
+                }
+                if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_PROCESSED) {
+                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Processed.</div>';
+                }
+                if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_PENDING) {
+                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Pending.</div>';
+                }
+                if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_COMPLETED) {
+                    echo '<div class="alert alert-success" role="alert">For this month we successfully paid you: '.$sum_total_text_success.$sum_total_payout_success.'.</div>';
+                }
+                if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_REFUND) {
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was refund.</div>';
+                }
+                if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_DENIED) {
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was denied.</div>';
+                }
+                if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_ERROR) {
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but there was an error.</div>';
+                }
+                
+                if(isset($product['payment_transaction_id'])) {
+                    echo ' You can see the details of the transaction on <a target="_NEW" href="https://www.paypal.com/cgi-bin/webscr?cmd=_view-a-trans&id='.$product['payment_transaction_id'].'">PayPal</a>.';
                 }
             ?>
             
