--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -179,30 +179,31 @@ if ($this->countDownloadsOverall > 0) {
                    public static $PAYOUT_STATUS_ERROR = 99;
                 */
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_REQUESTED) {
-                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Requested</div>';
+                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Requested.';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_PROCESSED) {
-                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Processed.</div>';
+                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Processed..';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_PENDING) {
-                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Pending.</div>';
+                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Pending..';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_COMPLETED) {
-                    echo '<div class="alert alert-success" role="alert">For this month we successfully paid you: '.$sum_total_text_success.$sum_total_payout_success.'.</div>';
+                    echo '<div class="alert alert-success" role="alert">For this month we successfully paid you: '.$sum_total_text_success.$sum_total_payout_success.'..';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_REFUND) {
-                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was refund.</div>';
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was refund..';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_DENIED) {
-                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was denied.</div>';
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was denied..';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_ERROR) {
-                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but there was an error.</div>';
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but there was an error..';
                 }
                 
                 if(isset($product['payment_transaction_id'])) {
                     echo ' You can see the details of the transaction on <a target="_NEW" href="https://www.paypal.com/cgi-bin/webscr?cmd=_view-a-trans&id='.$product['payment_transaction_id'].'">PayPal</a>.';
                 }
+                echo '</div>';
             ?>
             
             <?php 
