--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -182,22 +182,22 @@ if ($this->countDownloadsOverall > 0) {
                     echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Requested.';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_PROCESSED) {
-                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Processed..';
+                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Processed.';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_PENDING) {
-                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Pending..';
+                    echo '<div class="alert alert-info" role="alert">We send your payout. The actual status is: Pending.';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_COMPLETED) {
-                    echo '<div class="alert alert-success" role="alert">For this month we successfully paid you: '.$sum_total_text_success.$sum_total_payout_success.'..';
+                    echo '<div class="alert alert-success" role="alert">For this month we successfully paid you: '.$sum_total_text_success.$sum_total_payout_success.'.';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_REFUND) {
-                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was refund..';
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was refund.';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_DENIED) {
-                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was denied..';
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but your payment was denied.';
                 }
                 if ($product['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_ERROR) {
-                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but there was an error..';
+                    echo '<div class="alert alert-danger" role="alert">We tried to payout your plings, but there was an error.';
                 }
                 
                 if(isset($product['payment_transaction_id'])) {
