--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -51,7 +51,7 @@
 			width: 100%;
 			height: 187px;
 			border-top:1px solid #ccc;
-			
+			cursor: pointer;
 			img.image_small{
 				float: left;						
 				width: 167px;
@@ -174,7 +174,7 @@
 				padding-top: 20px;
 				padding-bottom: 10px;
 				width: 100%;
-				overflow-x: scroll;				
+				overflow-x: auto;				
 			}
 
 			table.opendesktoppploadfilestable{
