backend: payout list

--- a/application/modules/backend/views/scripts/memberpayout/index.phtml
+++ b/application/modules/backend/views/scripts/memberpayout/index.phtml
@@ -111,7 +111,7 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                     create: false
                 },
                 payment_transaction_id: {
-                    title: 'Paypal TransaktionId',
+                    title: 'Paypal Transaction Id',
                     list: true,
                     edit: true,
                     create: true
