- obsolete products removed
- solr search added
- paypal payout back end added

--- a/application/modules/default/views/scripts/settings/index.phtml
+++ b/application/modules/default/views/scripts/settings/index.phtml
@@ -23,6 +23,7 @@
 $helperImage = new Default_View_Helper_Image();
 $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $this->tab = 'settings';
+
 ?>
 
 <main class="user-admin-page">
@@ -44,6 +45,24 @@ $this->tab = 'settings';
                 <!-- PAGE BODY -->
                 <section class="settings-page">
                     <h1 class="page-title"><?= $this->translate('Settings') ?></h1>
+                <?php
+                    $member = $this->member;
+                    if($member->paypal_valid_status > 100) {
+                        $status = $this->paypal_valid_status;
+                        if($status->color == 'red') {
+                            echo '<div class="alert alert-danger" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'yellow') {
+                            echo '<div class="alert alert-warning" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'blue') {
+                            echo '<div class="alert alert-info" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'green') {
+                            echo '<div class="alert alert-success" role="alert">'.$status->description.'</div>';
+                        }
+                    }
+                ?>
                     <br/>
 
                     <div class="pling-nav-tabs">
@@ -86,7 +105,7 @@ $this->tab = 'settings';
                                             <?= $this->translate('Profile Picture') ?>
                                     </a>
                             </li>  
-
+                            
 
                             <li >
                                     <a href="#form-picture-background-panel" data-toggle="tab">
@@ -94,7 +113,7 @@ $this->tab = 'settings';
                                             <?= $this->translate('Profile Picture Background') ?>
                                     </a>
                             </li> 
-
+                              
                               <li >
                                       <a href="#form-password-panel" data-toggle="tab">
                                    <span class="glyphicon glyphicon-lock"></span>
@@ -154,13 +173,13 @@ $this->tab = 'settings';
                                 </section>
                             </div>
 
-
+                            
                               <div class="tab-pane " id="form-picture-background-panel">
                                 <section class="panel container"  id="form-picture-background">
                                     <?php echo $this->render('settings/partials/picture-bg.phtml'); ?>
                                 </section>
                             </div>
-
+                           
 
                               <div class="tab-pane " id="form-password-panel">
                                  <section class="panel container"  id="form-password">
