--- a/application/modules/default/views/scripts/user/plings.phtml
+++ b/application/modules/default/views/scripts/user/plings.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 /**
  *  ocs-webserver
  *
@@ -40,16 +40,36 @@ $this->countDownloadsOverall = count($this->downloads);
                 <div class="my-products-heading">
                     <h1 class="page-title left"><?= $this->translate('Payout') ?></h1>
                 </div>
+                <section>
+                <?php
+                    $member = $this->view_member;
+                    if($member->paypal_valid_status > 100) {
+                        $status = $this->paypal_valid_status;
+                        if($status->color == 'red') {
+                            echo '<div class="alert alert-danger" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'yellow') {
+                            echo '<div class="alert alert-warning" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'blue') {
+                            echo '<div class="alert alert-info" role="alert">'.$status->description.'</div>';
+                        }
+                        if($status->color == 'green') {
+                            echo '<div class="alert alert-success" role="alert">'.$status->description.'</div>';
+                        }
+                    }
+                ?>
+                </section>
                 <div class="my-products-list" id="my-payout-list">
                     <?php
                     //if ($this->countDownloadsOverall > 0) {
-                        echo $this->render('user/partials/loopPlings.phtml');
+                    echo $this->render('user/partials/loopPlings.phtml');
                     //} else {
                     //    echo '<div class="well well-sm" role="alert">You have no downloads and no plings.</div>';
                     //}
-                     ?>
+                    ?>
                 </div>
-                
+
             </section>
             <!-- /PAGE BODY -->
         </section>
