--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -193,12 +193,32 @@
 					background-color: #fff;
 				}
 			}
+			.opendesktopwidgetcommentrow{
+				display: block;
+				width: 100%;
+				.image_small{
+					float: left;						
+					width: 60px;
+					height: 60px;
+					margin-top:10px;
+					margin-bottom:10px;
+					border-radius: 50%;
+					border: 1px solid #ccc;
+
+				}
+				.updatetime{
+					float: right;
+				}
+				
+			}
+			
 		}
 	}
 
 	.opendesktopwidgetpager{
 		display: block;
 		text-align: right;
+		padding-right: 10px;
 		ul.opendesktopwidgetpager{
 			display: inline-block;
 			padding-left: 0;
