--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -193,24 +193,78 @@
 					background-color: #fff;
 				}
 			}
-			.opendesktopwidgetcommentrow{
-				display: block;
-				width: 100%;
-				.image_small{
-					float: left;						
-					width: 60px;
-					height: 60px;
-					margin-top:10px;
-					margin-bottom:10px;
-					border-radius: 50%;
-					border: 1px solid #ccc;
-
-				}
-				.updatetime{
-					float: right;
-				}
+			.opendesktopwidgetcomments{
+				padding:20px;
 				
+				#opendesktopwidget-main-container-comments{
+						.opendesktopwidgetcommentrow{
+							display: block;
+							width: 100%;	
+							padding-top: 10px;
+							padding-bottom: 10px;				
+							.image_small{
+								float: left;						
+								width: 60px;
+								height: 60px;								
+								border-radius: 50%;
+								border: 1px solid #ccc;
+
+							}
+							.updatetime{
+										float: right;
+									}		
+
+							.opendesktopwidgetcomment_content{								
+								display: block;				
+								
+								margin-left: 70px;				
+								padding-top: 15px;
+								padding-right: 50px;
+								
+																						
+							}
+
+							&.level1{
+								padding-left: 0px;
+								
+							}
+
+							&.level2{
+								padding-left: 20px;
+								.image_small{
+									width: 40px;
+									height: 40px;
+								}
+								
+							}
+
+							&.level3{
+								padding-left: 40px;
+								.image_small{
+									width: 40px;
+									height: 40px;
+								}
+							}
+							&.level4{
+								padding-left: 60px;
+								.image_small{
+									width: 40px;
+									height: 40px;
+								}
+							}
+							&.level5{
+								padding-left: 80px;
+								.image_small{
+									width: 40px;
+									height: 40px;
+								}
+							}
+						}
+
+						
+				}
 			}
+			
 			
 		}
 	}
