widget update comments

--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -198,8 +198,7 @@
 				
 				#opendesktopwidget-main-container-comments{
 						.opendesktopwidgetcommentrow{
-							display: block;
-							width: 100%;	
+							display: block;							
 							padding-top: 10px;
 							padding-bottom: 10px;				
 							.image_small{
@@ -234,6 +233,9 @@
 								.image_small{
 									width: 40px;
 									height: 40px;
+								}
+								.opendesktopwidgetcomment_content{
+									margin-left: 50px;
 								}
 								
 							}
