add/edit product: add more padding

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -92,6 +92,10 @@ $categoryPath[] = $valueCatId;
             top: -4px;
             width: 1em;
         }
+        
+        .add-product-page {
+            padding-top: 15px;
+        }
 
     </style>
     <main class="user-admin-page">
