--- a/application/modules/default/views/scripts/settings/partials/payment.phtml
+++ b/application/modules/default/views/scripts/settings/partials/payment.phtml
@@ -30,6 +30,24 @@
               data-trigger="#payments-trigger">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <?php
+                        $member = $this->member;
+                        if($member->paypal_valid_status > 100) {
+                            $status = $this->paypal_valid_status;
+                            if($status->color == 'red') {
+                                echo '<div class="alert alert-danger" role="alert">'.$status->description.'</div>';
+                            }
+                            if($status->color == 'yellow') {
+                                echo '<div class="alert alert-warning" role="alert">'.$status->description.'</div>';
+                            }
+                            if($status->color == 'blue') {
+                                echo '<div class="alert alert-info" role="alert">'.$status->description.'</div>';
+                            }
+                            if($status->color == 'green') {
+                                echo '<div class="alert alert-success" role="alert">'.$status->description.'</div>';
+                            }
+                        }
+                    ?>
                     <p class="italic">
                         <?= $this->translate('Here are the settings for accepting donations. If these options are empty, we cannot payout the plings for your products.') ?>
                     </p>
