--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -136,9 +136,14 @@ if ($this->countDownloadsOverall > 0) {
         }
         
         $infoText .= $infoTextLinkToPaypal;
+        
+        $popover = "";
+        if(isset($download['status'])) {
+            $popover = '<div class="inline payout-popover-'.$infoClass.'" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="'.$infoTitle.'" data-trigger="hover" data-html="true" data-content="'.$infoText.'"><span style="'. $infoIconStyle .'" class="glyphicon '.$infoIcon.'" aria-hidden="true"></span></div>';
+        }
     ?>
     <li class="<?=$css_active?> ">
-        <a href="#<?= $download['yearmonth'] ?>" data-toggle="tab"><?= $printDate ?><?= '<div class="inline payout-popover-'.$infoClass.'" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="'.$infoTitle.'" data-trigger="hover" data-html="true" data-content="'.$infoText.'"><span style="'. $infoIconStyle .'" class="glyphicon '.$infoIcon.'" aria-hidden="true"></span></div>' ?></a>
+        <a href="#<?= $download['yearmonth'] ?>" data-toggle="tab"><?= $printDate ?><?= $popover ?></a>
     </li>
     
     <?php
