backend: payout status

--- a/application/modules/backend/views/scripts/payoutstatus/index.phtml
+++ b/application/modules/backend/views/scripts/payoutstatus/index.phtml
@@ -67,9 +67,9 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                 },
                 color: {
                     title: 'Color',
-                    list: true,
-                    create: true,
-                    edit: true
+                    list: false,
+                    create: false,
+                    edit: false
                 },
                 is_active: {
                     title: 'Active',
