--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -76,12 +76,7 @@ if ($this->countDownloadsOverall > 0) {
     
     <?php   
         $showDiv = false;
-        $infoClass= "";
-        $infoTitle = "";
-        $infoText = "";
-        $icon = "";
         $infoTextLinkToPaypal = "";
-        $infoStyle = "";
         
         if(isset($download['payment_transaction_id'])) {
             $infoTextLinkToPaypal = ' Your PayPal TransactionId:'.$download['payment_transaction_id'].'.';
@@ -91,54 +86,14 @@ if ($this->countDownloadsOverall > 0) {
         
         $infoTitle = $payoutStatus['title'];
         $infoText = $payoutStatus['description'];
-        
-        if ($download['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_REQUESTED) {
-            $infoClass = "info";
-            $infoStyle = "color: #31708f; background-color: #d9edf7; border-color: #bce8f1;";
-            $infoIcon = "glyphicon-info-sign";
-            $infoIconStyle = "color: #31708f; ";
-        }
-        if ($download['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_PROCESSED) {
-            $infoClass = "info";
-            $infoStyle = "color: #31708f; background-color: #d9edf7; border-color: #bce8f1;";
-            $infoIcon = "glyphicon-info-sign";
-            $infoIconStyle = "color: #31708f; ";
-        }
-        if ($download['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_PENDING) {
-            $infoClass = "info";
-            $infoStyle = "color: #31708f; background-color: #d9edf7; border-color: #bce8f1;";
-            $infoIcon = "glyphicon-info-sign";
-            $infoIconStyle = "color: #31708f; ";
-        }
-        if ($download['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_COMPLETED) {
-            $infoClass = "success";
-            $infoStyle = "color: #3c763d; background-color: #dff0d8; border-color: #d6e9c6;";
-            $infoIcon = "glyphicon-ok-sign";
-            $infoIconStyle = "color: #3c763d; ";
-        }
-        if ($download['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_REFUND) {
-            $infoClass = "danger";
-            $infoStyle = "background-color: #f2dede; color: #a94442; border-color: #ebccd1;";
-            $infoIcon = "glyphicon-exclamation-sign";
-            $infoIconStyle = "color: #a94442; ";
-        }
-        if ($download['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_DENIED) {
-            $infoClass = "danger";
-            $infoStyle = "background-color: #f2dede; color: #a94442; border-color: #ebccd1;";
-            $infoIcon = "glyphicon-exclamation-sign";
-            $infoIconStyle = "color: #a94442; ";
-        }
-        if ($download['status'] == Default_Model_DbTable_MemberPayout::$PAYOUT_STATUS_ERROR) {
-            $infoClass = "danger";
-            $infoStyle = "background-color: #f2dede; color: #a94442; border-color: #ebccd1;";
-            $infoIcon = "glyphicon-exclamation-sign";
-            $infoIconStyle = "color: #a94442; ";
-        }
+        $infoIconStyle = "color: ".$payoutStatus['color']." ";
+        $infoClass = $payoutStatus['type'];
+        $infoIcon = $payoutStatus['icon'];
         
         $infoText .= $infoTextLinkToPaypal;
         
         $popover = "";
-        if(isset($download['status'])) {
+        if(isset($download['status']) && isset($infoText)) {
             $popover = '<div class="inline payout-popover-'.$infoClass.'" style="margin-left:.2em;" data-placement="top" data-toggle="popover" title="'.$infoTitle.'" data-trigger="hover" data-html="true" data-content="'.$infoText.'"><span style="'. $infoIconStyle .'" class="glyphicon '.$infoIcon.'" aria-hidden="true"></span></div>';
         }
     ?>
