--- a/application/modules/backend/views/scripts/memberpayout/index.phtml
+++ b/application/modules/backend/views/scripts/memberpayout/index.phtml
@@ -124,8 +124,9 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                 },
                 status: {
                     title: 'Our Payment Status',
-                    options: {'': '', '0': 'New', '1': 'Requested', '10': 'Processed', '50': 'Pending', '100' : 'Completed', '999': 'Denied', '900': 'Refund', '99' : 'Error'},
                     /**
+                    options: {'': '', '0': 'New', '1': 'Requested', '10': 'Processed', '50': 'Pending', '100' : 'Completed', '999': 'Denied', '900': 'Refund', '99' : 'Error'},
+                    
                      *  public static $PAYOUT_STATUS_NEW = 0;
                         public static $PAYOUT_STATUS_REQUESTED = 1;
                         public static $PAYOUT_STATUS_PROCESSED = 10;
@@ -135,7 +136,16 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                         public static $PAYOUT_STATUS_REFUND = 900;
                         public static $PAYOUT_STATUS_ERROR = 99;
                      */
-                    optionsSorting: 'id',
+                    <?php 
+                        $optionString = "'':'',";
+                        $payoutStatusModel = new Default_Model_DbTable_PayoutStatus();
+                        $list = $payoutStatusModel->getStatiForSelectList();
+                        foreach ($list as $key => $value) {
+                            $optionString.= "'".$key."':'".$key." - ".$value."',";
+                        }
+                        echo "options: {" . $optionString . "},";
+                    ?>
+                    
                     list: true,
                     edit: true
                 },
@@ -145,7 +155,7 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                     if (data.records[i].status == 100) {
                         $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:green !important; color:white !important;");
                     }
-                    if (data.records[i].status == 1) {
+                    if (data.records[i].status > 0 && data.records[i].status < 100) {
                         $('#TableContainer').find(".jtable tbody tr:eq(" + i + ")").css("cssText", "background-color:yellow !important; color:black !important;");
                     }
                     if (data.records[i].status > 100) {
