--- a/application/modules/backend/views/scripts/memberpayout/index.phtml
+++ b/application/modules/backend/views/scripts/memberpayout/index.phtml
@@ -118,7 +118,7 @@ $lastMonth = date("Ym", strtotime("first day of previous month"));
                 },
                 payment_status: {
                     title: 'Paypal Status',
-                    list: true,
+                    list: false,
                     edit: false,
                     create: false
                 },
