--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -13,6 +13,15 @@
 		display: none !important;
 	}
 
+	i.fa-spinner{
+			font-size: 30px;
+	}
+	
+	i.fa-angle-double-left{
+			font-size: 20px;
+			padding-right: 10px;
+	}
+
 	.opendesktop-widget-btn {
 	    display: inline-block;
 	    padding: 6px 12px;
@@ -558,11 +567,15 @@
 	}
 	.opendesktopwidgetcomments{
 		width: 75%;
+		.fa-spinner{
+			font-size: 30px;
+		}
 	}
 
 	.opendesktopwidgetpager{
 		display: flex;				
 		justify-content: right;
+		align-items: center;
 		ul.opendesktopwidgetpager{
 			display: inline-block;
 			padding-left: 0;
