--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -191,7 +191,7 @@
                                 background: linear-gradient(#fff,#EDEDED);                                
                                 border-bottom-left-radius: 2px;
                                 border-bottom-right-radius: 2px;
-                                width: 200px;
+                                width: 100%;
                                 overflow-x:hidden;
                                 padding-bottom: 10px;
 
