--- a/httpdocs/widget/style.css
+++ b/httpdocs/widget/style.css
@@ -216,7 +216,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center;*/
 }
 #opendesktop-widget-container #opendesktopwidget-main-container .opendesktopwidgetrow {
   width: 200px;
