--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -169,7 +169,7 @@
 	                display: flex;
 	                flex-wrap: wrap;
 	                flex-direction: row;
-	                justify-content: center;
+	               /* justify-content: center;*/
                     .opendesktopwidgetrow{                      
                           width: 200px;
                           padding: 0;
