--- a/httpdocs/widget/style.css
+++ b/httpdocs/widget/style.css
@@ -231,7 +231,7 @@
 }
 #opendesktop-widget-container #opendesktopwidget-main-container .opendesktopwidgetrow img.image_small {
   width: 170px;
-  height: 150px;
+  height: 167px;
   vertical-align: middle;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -595,6 +595,7 @@
   display: flex;
   justify-content: right;
   align-items: center;
+  padding-right: 20px;
 }
 #opendesktop-widget-container .opendesktopwidgetpager ul.opendesktopwidgetpager {
   display: inline-block;
