--- a/httpdocs/widget/style.less
+++ b/httpdocs/widget/style.less
@@ -182,7 +182,7 @@
                            cursor: pointer;
                           img.image_small{
                                 width: 170px;
-                                height: 150px;
+                                height: 167px;
                                 vertical-align: middle;
                                 padding-top: 10px;
                                 padding-bottom: 10px;
@@ -576,6 +576,7 @@
 		display: flex;				
 		justify-content: right;
 		align-items: center;
+		padding-right: 20px;
 		ul.opendesktopwidgetpager{
 			display: inline-block;
 			padding-left: 0;
